force-app/main/default/objects/Cart_Item__c/fields/Cart_Id__c.field-meta.xml
<CustomField>
    <fullName>Cart_Id__c</fullName>
    <description>The parent cart under which the item is added</description>
    <label>Cart Id</label>
    <referenceTo>Cart__c</referenceTo>
    <relationshipLabel>Cart Items</relationshipLabel>
    <relationshipName>Cart_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>