force-app/main/default/objects/Cart_Item__c/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <inlineHelpText>The original amount of the product before any discount</inlineHelpText>
    <label>List Price</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>