force-app/main/default/objects/Cart_Item__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description>The Selling Price of the Product</description>
    <label>Unit Price</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>