force-app/main/default/objects/Cart_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Cart__c</columns>
    <columns>Food__c</columns>
    <columns>l_Quantity__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>